--- a/src/styles/calendar.module.scss
+++ b/src/styles/calendar.module.scss
@@ -1,13 +1,23 @@
 .calendar {
   display: grid;
   gap: 10px;
-  grid-template-rows: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 20px);
   grid-auto-flow: column;
 }
 
 .day {
-  width: 35px;
-  height: 35px;
-  border-radius: 6px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
   background-color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+
+.note {
+  @extend .day;
+  background-color: tomato;
+  &:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+  }
 }
