--- a/src/styles/calendar.module.scss
+++ b/src/styles/calendar.module.scss
@@ -10,8 +10,25 @@
   height: 20px;
   border-radius: 50px;
   background-color: #fff;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in;
+  // animation: pop-in 0.3s ease-in forwards;
+  // opacity: 0;
 }
+
+// @keyframes pop-in {
+//   0% {
+//     opacity: 0;
+//     transform: scale(0);
+//   }
+//   90% {
+//     opacity: 0.9;
+//     transform: scale(1.1);
+//   }
+//   100% {
+//     opacity: 1;
+//     transform: scale(1);
+//   }
+// }
 
 .note {
   @extend .day;
