--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,5 +1,5 @@
 @mixin link {
-  color: #ff6969;
+  color: rgb(249, 42, 173);
   text-decoration: none;
   cursor: pointer;
   transition: all 0.2s ease-out;
