--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
 @import 'mixins.scss';
 
 * {
@@ -7,7 +8,7 @@
 
 html {
   font-family: 'Montserrat', sans-serif;
-  background-color: #213047;
+  background-color: rgb(25, 36, 60);
   color: #fff;
   margin: 0;
   padding: 0;
@@ -33,11 +34,13 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Pacifico', cursive;
-  font-weight: 500;
-  margin-top: 0;
+  font-weight: 300;
+  text-transform: capitalize;
+  font-family: 'Fira Code', monospace;
+  color: #72f1b8;
 }
 
 h1 {
-  font-size: 60px;
+  font-size: 50px;
+  // font-family: 'Pacifico', cursive;
 }
