--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,14 +4,23 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    height: 2px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: var(--secondary);
+  }
 }
 
 html {
   font-family: 'Montserrat', sans-serif;
-  background-color: rgb(25, 36, 60);
-  color: #fff;
-  margin: 0;
-  padding: 0;
+  background-color: var(--dark-blue);
+  color: var(--white);
 }
 
 html,
@@ -19,10 +28,6 @@ body,
 #___gatsby,
 #gatsby-focus-wrapper {
   height: 100%;
-}
-
-body {
-  margin: 0;
 }
 
 a {
@@ -37,10 +42,15 @@ h5 {
   font-weight: 300;
   text-transform: capitalize;
   font-family: 'Fira Code', monospace;
-  color: #72f1b8;
+  color: var(--secondary);
+  margin: 1em 0;
 }
 
 h1 {
   font-size: 50px;
-  // font-family: 'Pacifico', cursive;
+}
+
+p {
+  line-height: 1.8em;
+  margin-bottom: 1em;
 }
