--- a/src/styles/prism.synthwave.css
+++ b/src/styles/prism.synthwave.css
@@ -1,3 +1,23 @@
+:root {
+  --neon-purple: #f92aad;
+  --neon-green: #72f1b8;
+  --neon-cyan: #67cdcc;
+  --tomato: #f87c32;
+  --dark-blue: #19243c;
+  --blue: #6196cc;
+  --white-grey: #f4eee4;
+  --white: #fff5f6;
+  --white2: #fdfdfd;
+  --gray: #ccc;
+  --dark-gray: #8e8e8e;
+  --pink: #e2777a;
+  --black: #2a2139;
+  --green: #32cd32;
+  --primary: var(--neon-purple);
+  --secondary: var(--neon-green);
+  --background: var(--dark-blue);
+}
+
 /*
  * Synthwave '84 Theme originally by Robb Owen [@Robb0wen] for Visual Studio Code
  * Demo: https://marc.dev/demo/prism-synthwave84
@@ -7,8 +27,7 @@
 
 code[class*='language-'],
 pre[class*='language-'] {
-  color: #f92aad;
-  /* text-shadow: 0 0 2px #100c0f, 0 0 5px #dc078e33, 0 0 10px #fff3; */
+  color: var(--neon-purple);
   background: none;
   font-family: 'Fira Code', Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
   font-size: 1em;
@@ -39,7 +58,7 @@ pre[class*='language-'] {
 
 :not(pre) > code[class*='language-'],
 pre[class*='language-'] {
-  background-color: #2a2139;
+  background-color: var(--black);
 }
 
 /* Inline code */
@@ -54,11 +73,11 @@ pre[class*='language-'] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: #8e8e8e;
+  color: var(--dark-gray);
 }
 
 .token.punctuation {
-  color: #ccc;
+  color: var(--gray);
 }
 
 .token.tag,
@@ -68,31 +87,31 @@ pre[class*='language-'] {
 .token.unit,
 .token.hexcode,
 .token.deleted {
-  color: #e2777a;
+  color: var(--pink);
 }
 
 .token.property,
 .token.selector {
-  color: #72f1b8;
+  color: var(--neon-green);
 }
 
 .token.function-name {
-  color: #6196cc;
+  color: var(--blue);
 }
 
 .token.boolean,
 .token.selector .token.id,
 .token.function {
-  color: #fdfdfd;
+  color: var(--white2);
 }
 
 .token.class-name {
-  color: #fff5f6;
+  color: var(--white);
 }
 
 .token.constant,
 .token.symbol {
-  color: #f92aad;
+  color: var(--neon-purple);
 }
 
 .token.important,
@@ -100,7 +119,7 @@ pre[class*='language-'] {
 .token.keyword,
 .token.selector .token.class,
 .token.builtin {
-  color: #f4eee4;
+  color: var(--white-grey);
 }
 
 .token.string,
@@ -108,13 +127,13 @@ pre[class*='language-'] {
 .token.attr-value,
 .token.regex,
 .token.variable {
-  color: #f87c32;
+  color: var(--tomato);
 }
 
 .token.operator,
 .token.entity,
 .token.url {
-  color: #67cdcc;
+  color: var(--neon-cyan);
 }
 
 .token.important,
@@ -131,5 +150,5 @@ pre[class*='language-'] {
 }
 
 .token.inserted {
-  color: green;
+  color: var(--green);
 }
