--- a/src/styles/navigation.module.scss
+++ b/src/styles/navigation.module.scss
@@ -1,6 +1,8 @@
 @import 'mixins.scss';
 
 .menu {
+  display: flex;
+  align-items: center;
   li {
     margin-right: 1em;
     @include link;
@@ -10,4 +12,9 @@
 .active h1 {
   transition: all 0.2s ease-out;
   color: var(--primary);
+}
+
+.search {
+  margin-left: auto;
+  margin-right: 0;
 }
