--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,6 +20,7 @@
 
 html {
   font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
   background-color: var(--dark-blue);
   color: var(--white);
 }
@@ -48,10 +49,24 @@ h5 {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 3em;
 }
 
 p {
   line-height: 1.8em;
   margin-bottom: 1em;
+}
+
+@media screen and (max-width: 800px) {
+  html {
+    font-size: 12px;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    margin: 0.2rem 0;
+  }
 }
