--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -49,24 +49,24 @@ h5 {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 3rem;
 }
 
 p {
-  line-height: 1.8em;
-  margin-bottom: 1em;
+  line-height: 1.8rem;
+  margin-bottom: 1rem;
 }
 
 @media screen and (max-width: 800px) {
-  html {
-    font-size: 12px;
-  }
-
   h1,
   h2,
   h3,
   h4,
   h5 {
     margin: 0.2rem 0;
+  }
+
+  h1 {
+    font-size: 2rem;
   }
 }
